Solucionar version .toList()